--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@svgr/webpack": "^4.1.0",
     "autoprefixer": "^9.4.2",
     "babel-plugin-styled-components": "^1.10.0",
-    "formik": "^1.3.2",
     "gatsby": "^2.0.62",
     "gatsby-cli": "^2.4.6",
     "gatsby-image": "^2.0.22",
@@ -31,7 +30,6 @@
     "gatsby-plugin-subfont": "^1.0.3",
     "gatsby-plugin-svgr": "^2.0.1",
     "gatsby-source-filesystem": "^2.0.10",
-    "gatsby-source-wordpress": "^3.0.22",
     "gatsby-transformer-sharp": "^2.1.9",
     "gatsby-transformer-yaml": "^2.1.6",
     "intersection-observer": "^0.5.1",
@@ -48,19 +46,16 @@
     "react-anchor-link-smooth-scroll": "^1.0.11",
     "react-automata": "^4.0.4",
     "react-dom": "^16.7.0-alpha.0",
-    "react-flickity-component": "^3.1.0",
     "react-headroom": "^2.2.4",
     "react-helmet": "^5.2.0",
     "react-image-lightbox": "^5.0.0",
     "react-instafeed": "^0.4.0",
     "react-intersection-observer": "^6.3.1",
     "react-measure": "^2.1.3",
-    "react-media": "^1.8.0",
     "react-modal": "^3.6.1",
     "react-player": "^1.7.0",
     "react-pose": "^4.0.3",
     "react-shapes": "^0.1.0",
-    "react-slick": "^0.23.2",
     "react-spring": "^6.1.10",
     "react-stickynode": "^2.1.0",
     "react-test-renderer": "^16.6.3",
@@ -68,15 +63,11 @@
     "react-transition-group": "^2.5.0",
     "react-waypoint": "^8.1.0",
     "shortid": "^2.2.14",
-    "slick-carousel": "^1.8.1",
     "styled-components": "^4.1.3",
-    "styled-system": "^3.2.0",
-    "stylefire": "^2.3.2",
     "subfont": "^3.6.2",
     "tailwindcss": "^0.7.2",
     "twitter-fetcher": "^18.0.2",
-    "what-input": "^5.1.3",
-    "yup": "^0.26.6"
+    "what-input": "^5.1.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
