--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
     "object-fit-images": "^3.2.4",
     "precss": "^4.0.0",
     "purgecss-webpack-plugin": "^1.4.0",
-    "react": "^16.7.0-alpha.0",
+    "react": "^16.8.0-alpha.1",
     "react-anchor-link-smooth-scroll": "^1.0.11",
     "react-automata": "^4.0.4",
-    "react-dom": "^16.7.0-alpha.0",
+    "react-dom": "^16.8.0-alpha.1",
     "react-headroom": "^2.2.4",
     "react-helmet": "^5.2.0",
     "react-image-lightbox": "^5.0.0",
@@ -67,7 +67,8 @@
     "subfont": "^3.6.2",
     "tailwindcss": "^0.7.2",
     "twitter-fetcher": "^18.0.2",
-    "what-input": "^5.1.3"
+    "what-input": "^5.1.3",
+    "xstate": "^4.2.4"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
