--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   ],
   "dependencies": {
     "@babel/plugin-transform-react-constant-elements": "^7.2.0",
+    "@reach/dialog": "^0.1.3",
     "@svgr/webpack": "^4.1.0",
     "autoprefixer": "^9.4.7",
     "babel-plugin-styled-components": "^1.10.0",
-    "gatsby": "^2.0.115",
-    "gatsby-cli": "^2.4.9",
+    "gatsby": "^2.0.119",
+    "gatsby-cli": "^2.4.10",
     "gatsby-image": "^2.0.29",
     "gatsby-plugin-manifest": "^2.0.17",
-    "gatsby-plugin-netlify": "^2.0.8",
+    "gatsby-plugin-netlify": "^2.0.10",
     "gatsby-plugin-netlify-cache": "^1.0.0",
-    "gatsby-plugin-offline": "^2.0.22",
-    "gatsby-plugin-postcss": "^2.0.5",
+    "gatsby-plugin-offline": "^2.0.23",
     "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-plugin-robots-txt": "^1.4.0",
     "gatsby-plugin-sharp": "^2.0.20",
@@ -35,34 +35,28 @@
     "intersection-observer": "^0.5.1",
     "is_js": "^0.9.0",
     "jsonp": "^0.2.1",
-    "layup": "^0.2.2",
     "lightbox-react": "^0.3.7",
     "loadjs": "^3.5.5",
     "no-scroll": "^2.1.1",
     "object-fit-images": "^3.2.4",
-    "precss": "^4.0.0",
-    "purgecss-webpack-plugin": "^1.4.0",
-    "react": "^16.8.0-alpha.1",
-    "react-anchor-link-smooth-scroll": "^1.0.11",
-    "react-automata": "^4.0.4",
-    "react-dom": "^16.8.0-alpha.1",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
     "react-headroom": "^2.2.4",
     "react-helmet": "^5.2.0",
     "react-image-lightbox": "^5.1.0",
     "react-instafeed": "^1.0.0",
-    "react-intersection-observer": "^7.0.0",
+    "react-intersection-observer": "^8.0.1",
     "react-measure": "^2.2.4",
-    "react-modal": "^3.8.1",
     "react-player": "^1.9.3",
-    "react-pose": "^4.0.6",
+    "react-pose": "^4.0.7",
+    "react-scroll": "^1.7.10",
     "react-shapes": "^0.1.0",
-    "react-spring": "^7.2.10",
+    "react-spring": "^8.0.7",
     "react-stickynode": "^2.1.1",
-    "react-test-renderer": "^16.7.0",
     "react-textarea-autosize": "^7.1.0",
     "react-transition-group": "^2.5.3",
-    "react-waypoint": "^8.1.0",
-    "shortid": "^2.2.14",
+    "resize-observer-polyfill": "^1.5.1",
+    "smoothscroll-polyfill": "^0.4.3",
     "styled-components": "^4.1.3",
     "subfont": "^3.6.2",
     "tailwindcss": "^0.7.4",
@@ -74,11 +68,12 @@
     "babel-eslint": "^10.0.1",
     "dotenv": "^6.2.0",
     "eslint": "^5.13.0",
-    "eslint-config-react-app": "^3.0.6",
-    "eslint-plugin-flowtype": "^3.2.1",
+    "eslint-config-react-app": "^3.0.7",
+    "eslint-plugin-flowtype": "^3.4.1",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4"
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.0.1"
   },
   "scripts": {
     "dev": "gatsby develop",
