--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -15,4 +15,5 @@ plugins:
 rules:
   import/first: 0
   no-use-before-define: 0
-  react-hooks/rules-of-hooks: error
+  react-hooks/rules-of-hooks: 2
+  # react-hooks/reactive-deps: 2
