--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Michael Uloth <hello@michaeluloth.com>",
   "browserslist": [
     "defaults",
-    "not ie < 11",
+    "not ie 11",
     "not ie_mob 11"
   ],
   "dependencies": {
