--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@svgr/webpack": "^4.1.0",
     "autoprefixer": "^9.4.7",
     "babel-plugin-styled-components": "^1.10.0",
+    "body-scroll-lock": "^2.6.1",
     "gatsby": "^2.1.4",
     "gatsby-cli": "^2.4.10",
     "gatsby-image": "^2.0.29",
@@ -37,7 +38,6 @@
     "jsonp": "^0.2.1",
     "lightbox-react": "^0.3.7",
     "loadjs": "^3.5.5",
-    "no-scroll": "^2.1.1",
     "object-fit-images": "^3.2.4",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
