--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "repository": "github:ooloth/gatsby-starter.git",
   "version": "1.0.0",
   "author": "Michael Uloth <hello@michaeluloth.com>",
+  "private": true,
   "browserslist": [
     "defaults",
     "not ie 11",
@@ -11,69 +12,69 @@
   ],
   "dependencies": {
     "@babel/plugin-transform-react-constant-elements": "^7.2.0",
-    "@reach/dialog": "^0.1.3",
+    "@reach/dialog": "^0.1.4",
     "@svgr/webpack": "^4.1.0",
-    "autoprefixer": "^9.4.7",
+    "autoprefixer": "^9.5.0",
     "babel-plugin-styled-components": "^1.10.0",
     "body-scroll-lock": "^2.6.1",
-    "gatsby": "^2.1.9",
-    "gatsby-cli": "^2.4.11",
-    "gatsby-image": "^2.0.29",
-    "gatsby-plugin-manifest": "^2.0.18",
-    "gatsby-plugin-netlify": "^2.0.11",
-    "gatsby-plugin-netlify-cache": "^1.0.0",
-    "gatsby-plugin-offline": "^2.0.24",
-    "gatsby-plugin-react-helmet": "^3.0.6",
+    "gatsby": "^2.2.5",
+    "gatsby-cli": "^2.4.17",
+    "gatsby-image": "^2.0.34",
+    "gatsby-plugin-manifest": "^2.0.24",
+    "gatsby-plugin-netlify": "^2.0.13",
+    "gatsby-plugin-netlify-cache": "^1.1.0",
+    "gatsby-plugin-offline": "^2.0.25",
+    "gatsby-plugin-react-helmet": "^3.0.10",
     "gatsby-plugin-robots-txt": "^1.4.0",
-    "gatsby-plugin-sharp": "^2.0.21",
-    "gatsby-plugin-sitemap": "^2.0.5",
-    "gatsby-plugin-styled-components": "^3.0.6",
-    "gatsby-plugin-subfont": "^1.0.3",
-    "gatsby-plugin-svgr": "^2.0.1",
-    "gatsby-source-filesystem": "^2.0.20",
-    "gatsby-transformer-sharp": "^2.1.14",
-    "gatsby-transformer-yaml": "^2.1.8",
+    "gatsby-plugin-sharp": "^2.0.30",
+    "gatsby-plugin-sitemap": "^2.0.10",
+    "gatsby-plugin-styled-components": "^3.0.7",
+    "gatsby-plugin-subfont": "^1.0.4",
+    "gatsby-plugin-svgr": "^2.0.2",
+    "gatsby-source-filesystem": "^2.0.27",
+    "gatsby-transformer-sharp": "^2.1.17",
+    "gatsby-transformer-yaml": "^2.1.10",
     "intersection-observer": "^0.5.1",
     "is_js": "^0.9.0",
     "jsonp": "^0.2.1",
     "lightbox-react": "^0.3.7",
-    "loadjs": "^3.5.5",
+    "loadjs": "^3.6.0",
     "object-fit-images": "^3.2.4",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
-    "react-headroom": "^2.2.4",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
+    "react-headroom": "^2.2.8",
     "react-helmet": "^5.2.0",
     "react-image-lightbox": "^5.1.0",
     "react-instafeed": "^1.0.0",
-    "react-intersection-observer": "^8.0.5",
+    "react-intersection-observer": "^8.22.3",
     "react-measure": "^2.2.4",
     "react-player": "^1.9.3",
-    "react-pose": "^4.0.7",
+    "react-pose": "^4.0.8",
     "react-scroll": "^1.7.11",
     "react-shapes": "^0.1.0",
-    "react-spring": "^8.0.7",
+    "react-spring": "^8.0.18",
     "react-stickynode": "^2.1.1",
     "react-textarea-autosize": "^7.1.0",
-    "react-transition-group": "^2.5.3",
+    "react-transition-group": "^2.6.1",
     "resize-observer-polyfill": "^1.5.1",
     "smoothscroll-polyfill": "^0.4.3",
     "styled-components": "^4.1.3",
     "subfont": "^3.6.2",
     "tailwindcss": "^0.7.4",
     "twitter-fetcher": "^18.0.2",
-    "what-input": "^5.1.3",
-    "xstate": "^4.3.2"
+    "what-input": "^5.1.4",
+    "xstate": "^4.3.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
-    "dotenv": "^6.2.0",
-    "eslint": "^5.14.1",
-    "eslint-config-react-app": "^3.0.7",
+    "dotenv": "^7.0.0",
+    "eslint": "^5.15.3",
+    "eslint-config-react-app": "^3.0.8",
     "eslint-plugin-flowtype": "^3.4.2",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-react-hooks": "^1.1.0-alpha.0",
+    "eslint-plugin-react-hooks": "^1.5.1",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.4"
   },
   "scripts": {
