--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^9.5.0",
     "babel-plugin-styled-components": "^1.10.0",
     "body-scroll-lock": "^2.6.1",
+    "d3-ease": "^1.0.5",
     "gatsby": "^2.2.5",
     "gatsby-cli": "^2.4.17",
     "gatsby-image": "^2.0.34",
