--- a/package.json
+++ b/package.json
@@ -11,31 +11,31 @@
     "not ie_mob 11"
   ],
   "dependencies": {
-    "@babel/plugin-transform-react-constant-elements": "^7.2.0",
-    "@reach/dialog": "^0.2.8",
-    "@svgr/webpack": "^4.2.0",
-    "autoprefixer": "^9.5.1",
-    "babel-plugin-styled-components": "^1.10.0",
-    "body-scroll-lock": "^2.6.1",
+    "@reach/dialog": "^0.2.9",
+    "@svgr/webpack": "^4.3.2",
+    "@xstate/react": "^0.7.0",
+    "autoprefixer": "^9.6.1",
+    "babel-plugin-styled-components": "^1.10.6",
+    "body-scroll-lock": "^2.6.4",
     "d3-ease": "^1.0.5",
-    "gatsby": "^2.7.1",
-    "gatsby-cli": "^2.6.2",
-    "gatsby-image": "^2.1.1",
-    "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-netlify": "^2.0.17",
+    "gatsby": "^2.13.24",
+    "gatsby-cli": "^2.7.15",
+    "gatsby-image": "^2.2.6",
+    "gatsby-plugin-manifest": "^2.2.3",
+    "gatsby-plugin-netlify": "^2.1.3",
     "gatsby-plugin-netlify-cache": "^1.2.0",
-    "gatsby-plugin-offline": "^2.1.1",
-    "gatsby-plugin-postcss": "^2.0.7",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-robots-txt": "^1.4.0",
-    "gatsby-plugin-sharp": "^2.1.1",
-    "gatsby-plugin-sitemap": "^2.1.0",
-    "gatsby-plugin-styled-components": "^3.0.7",
-    "gatsby-plugin-subfont": "^1.0.6",
+    "gatsby-plugin-offline": "^2.2.4",
+    "gatsby-plugin-postcss": "^2.1.2",
+    "gatsby-plugin-react-helmet": "^3.1.2",
+    "gatsby-plugin-robots-txt": "^1.5.0",
+    "gatsby-plugin-sharp": "^2.2.7",
+    "gatsby-plugin-sitemap": "^2.2.3",
+    "gatsby-plugin-styled-components": "^3.1.2",
+    "gatsby-plugin-subfont": "^1.1.2",
     "gatsby-plugin-svgr": "^2.0.2",
-    "gatsby-source-filesystem": "^2.0.37",
-    "gatsby-transformer-sharp": "^2.1.19",
-    "gatsby-transformer-yaml": "^2.1.12",
+    "gatsby-source-filesystem": "^2.1.5",
+    "gatsby-transformer-sharp": "^2.2.3",
+    "gatsby-transformer-yaml": "^2.2.3",
     "intersection-observer": "^0.7.0",
     "is_js": "^0.9.0",
     "jsonp": "^0.2.1",
@@ -49,39 +49,39 @@
     "react-helmet": "^5.2.1",
     "react-image-lightbox": "^5.1.0",
     "react-instafeed": "^1.0.0",
-    "react-intersection-observer": "^8.23.0",
+    "react-intersection-observer": "^8.24.1",
     "react-measure": "^2.3.0",
-    "react-player": "^1.11.0",
+    "react-player": "^1.11.1",
     "react-pose": "^4.0.8",
-    "react-scroll": "^1.7.11",
+    "react-scroll": "^1.7.12",
     "react-shapes": "^0.1.0",
-    "react-spring": "^8.0.20",
+    "react-spring": "^8.0.27",
     "react-stickynode": "^2.1.1",
     "react-textarea-autosize": "^7.1.0",
-    "react-transition-group": "^4.0.1",
+    "react-transition-group": "^4.2.1",
     "resize-observer-polyfill": "^1.5.1",
     "smoothscroll-polyfill": "^0.4.4",
-    "styled-components": "^4.2.0",
-    "subfont": "^3.6.2",
-    "tailwindcss": "^1.0.1",
+    "styled-components": "^4.3.2",
+    "subfont": "^3.6.3",
+    "tailwindcss": "^1.0.5",
     "twitter-fetcher": "^18.0.2",
-    "what-input": "^5.2.1",
-    "xstate": "^4.6.0"
+    "what-input": "^5.2.3",
+    "xstate": "^4.6.7"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.2",
     "dotenv": "^8.0.0",
-    "eslint": "^5.16.0",
+    "eslint": "^6.0.1",
     "eslint-config-react-app": "^4.0.1",
-    "eslint-plugin-flowtype": "^3.9.1",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-react-hooks": "^1.6.0",
+    "eslint-plugin-flowtype": "^3.11.1",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-react-hooks": "^1.6.1",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5"
   },
   "scripts": {
-    "dev": "GATSBY_GRAPHQL_IDE=playground gatsby develop",
+    "dev": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby clean && gatsby build && gatsby serve",
     "clean": "gatsby clean"
