--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# See: https://github.com/gatsbyjs/gatsby-starter-default/blob/master/.gitignore
+
 # Logs
 logs
 *.log
@@ -65,5 +67,6 @@ public
 yarn-error.log
 .pnp/
 .pnp.js
+
 # Yarn Integrity file
 .yarn-integrity
