--- a/package.json
+++ b/package.json
@@ -18,24 +18,25 @@
     "babel-plugin-styled-components": "^1.10.6",
     "body-scroll-lock": "^2.6.4",
     "d3-ease": "^1.0.5",
-    "gatsby": "^2.13.24",
-    "gatsby-cli": "^2.7.15",
+    "framer-motion": "^1.3.0",
+    "gatsby": "^2.13.39",
+    "gatsby-cli": "^2.7.19",
     "gatsby-image": "^2.2.6",
-    "gatsby-plugin-manifest": "^2.2.3",
+    "gatsby-plugin-manifest": "^2.2.4",
     "gatsby-plugin-netlify": "^2.1.3",
     "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-offline": "^2.2.4",
     "gatsby-plugin-postcss": "^2.1.2",
     "gatsby-plugin-react-helmet": "^3.1.2",
     "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sharp": "^2.2.7",
+    "gatsby-plugin-sharp": "^2.2.9",
     "gatsby-plugin-sitemap": "^2.2.3",
     "gatsby-plugin-styled-components": "^3.1.2",
     "gatsby-plugin-subfont": "^1.1.2",
     "gatsby-plugin-svgr": "^2.0.2",
-    "gatsby-source-filesystem": "^2.1.5",
-    "gatsby-transformer-sharp": "^2.2.3",
-    "gatsby-transformer-yaml": "^2.2.3",
+    "gatsby-source-filesystem": "^2.1.6",
+    "gatsby-transformer-sharp": "^2.2.4",
+    "gatsby-transformer-yaml": "^2.2.4",
     "intersection-observer": "^0.7.0",
     "is_js": "^0.9.0",
     "jsonp": "^0.2.1",
@@ -52,7 +53,6 @@
     "react-intersection-observer": "^8.24.1",
     "react-measure": "^2.3.0",
     "react-player": "^1.11.1",
-    "react-pose": "^4.0.8",
     "react-scroll": "^1.7.12",
     "react-shapes": "^0.1.0",
     "react-spring": "^8.0.27",
@@ -71,12 +71,12 @@
   "devDependencies": {
     "babel-eslint": "^10.0.2",
     "dotenv": "^8.0.0",
-    "eslint": "^6.0.1",
+    "eslint": "^6.1.0",
     "eslint-config-react-app": "^4.0.1",
-    "eslint-plugin-flowtype": "^3.11.1",
-    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-flowtype": "^3.12.1",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.6.1",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5"
   },
