--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-intersection-observer": "^8.24.1",
     "react-measure": "^2.3.0",
     "react-player": "^1.11.1",
+    "react-pose": "^4.0.8",
     "react-scroll": "^1.7.12",
     "react-shapes": "^0.1.0",
     "react-spring": "^8.0.27",
